--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ footer {
 
     .project-card img {
         width: 100%;
-        height: 220px; /* increased image height */
+        height: 110px;
         object-fit: cover;
         border-bottom: 1px solid #4da3ff44;
     }
