--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ footer {
     }
 
     .project-card img {
-        width: auto;
+        width: 200px;
         height: 150px;
         object-fit: cover;
         border-bottom: 1px solid #4da3ff44;
@@ -487,7 +487,7 @@ section h2 {
     align-items: center;
     gap: 8px; /* space between icon and text */
     background-color: #2a2a2a;
-    padding: 8px 12px;
+    padding: 8px 24px 8px 12px;
     border-radius: 6px;
     transition: background-color 0.3s ease;
     text-decoration: none;
@@ -502,6 +502,6 @@ section h2 {
     }
 
     #project-content .icon-link img {
-        height: 10px; /* control the icon size */
-        width: auto;
+        height: 20px; /* control the icon size */
+        width: 20px;
     }
