--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ section h2 {
     align-items: center;
     gap: 8px; /* space between icon and text */
     background-color: #2a2a2a;
-    padding: 6px 180px 6px 10px;
+    padding: 2px 170px 2px 10px;
     border-radius: 6px;
     transition: background-color 0.3s ease;
     text-decoration: none;
@@ -524,6 +524,6 @@ section h2 {
     }
 
     #project-content .icon-link img {
-        height: 2.0cm;
-        width: auto;
+        height: 1.2cm;
+        width: 1.2cm;
     }
