--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ section h2 {
     }
 
     #project-content .icon-link img {
-        height: 30px;
-        width: 30px;
-        object-fit: contain;
+        height: 50px;
+        width: 50px;
+        object-fit: cover;
     }
